force-app/main/default/objects/Widget__c/Widget__c.object-meta.xml
<CustomObject>
    <description>Stores widget information</description>
    <label>Widget</label>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Widget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>