force-app/main/default/objects/Widget__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True if a widget is new and not processed in a scheduled job.</description>
    <label>Is New?</label>
    <type>Checkbox</type>
</CustomField>