force-app/main/default/objects/Widget__c/fields/Is_Properly_Nested__c.field-meta.xml
<CustomField>
    <fullName>Is_Properly_Nested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if nesting is proper in the Value field else marked as false.</description>
    <label>Is Properly Nested</label>
    <type>Checkbox</type>
</CustomField>