force-app/main/default/objects/Widget__c/listViews/Invalid_Widgets.listView-meta.xml
<ListView>
    <fullName>Invalid_Widgets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Properly_Nested__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Invalid Widgets</label>
</ListView>