force-app/main/default/objects/Widget__c/listViews/New_Widgets_Created_Today.listView-meta.xml
<ListView>
    <fullName>New_Widgets_Created_Today</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>New Widgets Created Today</label>
</ListView>