force-app/main/default/objects/Widget__c/listViews/Valid_Widgets.listView-meta.xml
<ListView>
    <fullName>Valid_Widgets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Properly_Nested__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Valid Widgets</label>
</ListView>